@@ -1,7 +1,9 @@
 package info.nightscout.androidaps.plugins.Treatments;
 
+import android.content.Intent;
 import android.support.annotation.Nullable;
 
+import com.crashlytics.android.answers.CustomEvent;
 import com.squareup.otto.Subscribe;
 
 import org.slf4j.Logger;
@@ -11,14 +13,15 @@ import java.util.ArrayList;
 import java.util.Date;
 import java.util.List;
 
-import info.nightscout.androidaps.Config;
 import info.nightscout.androidaps.Constants;
 import info.nightscout.androidaps.MainApp;
 import info.nightscout.androidaps.R;
 import info.nightscout.androidaps.data.DetailedBolusInfo;
+import info.nightscout.androidaps.data.Intervals;
 import info.nightscout.androidaps.data.Iob;
 import info.nightscout.androidaps.data.IobTotal;
 import info.nightscout.androidaps.data.MealData;
+import info.nightscout.androidaps.data.NonOverlappingIntervals;
 import info.nightscout.androidaps.data.OverlappingIntervals;
 import info.nightscout.androidaps.data.Profile;
 import info.nightscout.androidaps.data.ProfileIntervals;
@@ -26,139 +29,144 @@ import info.nightscout.androidaps.db.ExtendedBolus;
 import info.nightscout.androidaps.db.ProfileSwitch;
 import info.nightscout.androidaps.db.TempTarget;
 import info.nightscout.androidaps.db.TemporaryBasal;
-import info.nightscout.androidaps.db.Treatment;
 import info.nightscout.androidaps.events.EventReloadProfileSwitchData;
 import info.nightscout.androidaps.events.EventReloadTempBasalData;
 import info.nightscout.androidaps.events.EventReloadTreatmentData;
 import info.nightscout.androidaps.events.EventTempTargetChange;
+import info.nightscout.androidaps.interfaces.InsulinInterface;
 import info.nightscout.androidaps.interfaces.PluginBase;
-import info.nightscout.androidaps.interfaces.PumpInterface;
+import info.nightscout.androidaps.interfaces.PluginDescription;
+import info.nightscout.androidaps.interfaces.PluginType;
 import info.nightscout.androidaps.interfaces.TreatmentsInterface;
+import info.nightscout.androidaps.logging.L;
+import info.nightscout.androidaps.plugins.ConfigBuilder.ConfigBuilderPlugin;
+import info.nightscout.androidaps.plugins.ConfigBuilder.ProfileFunctions;
 import info.nightscout.androidaps.plugins.IobCobCalculator.AutosensData;
 import info.nightscout.androidaps.plugins.IobCobCalculator.IobCobCalculatorPlugin;
+import info.nightscout.androidaps.plugins.Overview.Dialogs.ErrorHelperActivity;
+import info.nightscout.androidaps.plugins.Overview.events.EventDismissNotification;
+import info.nightscout.androidaps.plugins.Overview.notifications.Notification;
+import info.nightscout.androidaps.plugins.Sensitivity.SensitivityAAPSPlugin;
+import info.nightscout.androidaps.plugins.Sensitivity.SensitivityWeightedAveragePlugin;
+import info.nightscout.utils.DateUtil;
+import info.nightscout.utils.FabricPrivacy;
+import info.nightscout.androidaps.plugins.NSClientInternal.NSUpload;
 import info.nightscout.utils.SP;
+import info.nightscout.utils.T;
 
 /**
  * Created by mike on 05.08.2016.
  */
-public class TreatmentsPlugin implements PluginBase, TreatmentsInterface {
-    private static Logger log = LoggerFactory.getLogger(TreatmentsPlugin.class);
+public class TreatmentsPlugin extends PluginBase implements TreatmentsInterface {
+    private Logger log = LoggerFactory.getLogger(L.DATATREATMENTS);
 
-    public static IobTotal lastTreatmentCalculation;
-    public static IobTotal lastTempBasalsCalculation;
+    private static TreatmentsPlugin treatmentsPlugin;
 
-    public static List<Treatment> treatments;
-    private static OverlappingIntervals<TemporaryBasal> tempBasals = new OverlappingIntervals<>();
-    private static OverlappingIntervals<ExtendedBolus> extendedBoluses = new OverlappingIntervals<>();
-    private static OverlappingIntervals<TempTarget> tempTargets = new OverlappingIntervals<>();
-    private static ProfileIntervals<ProfileSwitch> profiles = new ProfileIntervals<>();
-
-    private static boolean fragmentEnabled = true;
-    private static boolean fragmentVisible = true;
-
-    @Override
-    public String getFragmentClass() {
-        return TreatmentsFragment.class.getName();
+    public static TreatmentsPlugin getPlugin() {
+        if (treatmentsPlugin == null)
+            treatmentsPlugin = new TreatmentsPlugin();
+        return treatmentsPlugin;
     }
 
-    @Override
-    public String getName() {
-        return MainApp.instance().getString(R.string.treatments);
-    }
+    private TreatmentService service;
 
-    @Override
-    public String getNameShort() {
-        String name = MainApp.sResources.getString(R.string.treatments_shortname);
-        if (!name.trim().isEmpty()) {
-            //only if translation exists
-            return name;
-        }
-        // use long name as fallback
-        return getName();
-    }
+    private IobTotal lastTreatmentCalculation;
+    private IobTotal lastTempBasalsCalculation;
 
-    @Override
-    public boolean isEnabled(int type) {
-        return type == TREATMENT && fragmentEnabled;
-    }
-
-    @Override
-    public boolean isVisibleInTabs(int type) {
-        return type == TREATMENT && fragmentVisible;
-    }
-
-    @Override
-    public boolean canBeHidden(int type) {
-        return true;
-    }
-
-    @Override
-    public boolean hasFragment() {
-        return true;
-    }
-
-    @Override
-    public boolean showInList(int type) {
-        return !Config.NSCLIENT;
-    }
-
-    @Override
-    public void setFragmentEnabled(int type, boolean fragmentEnabled) {
-        if (type == TREATMENT) this.fragmentEnabled = fragmentEnabled;
-    }
-
-    @Override
-    public void setFragmentVisible(int type, boolean fragmentVisible) {
-        if (type == TREATMENT) this.fragmentVisible = fragmentVisible;
-    }
-
-    @Override
-    public int getType() {
-        return PluginBase.TREATMENT;
-    }
+    private final ArrayList<Treatment> treatments = new ArrayList<>();
+    private final Intervals<TemporaryBasal> tempBasals = new NonOverlappingIntervals<>();
+    private final Intervals<ExtendedBolus> extendedBoluses = new NonOverlappingIntervals<>();
+    private final Intervals<TempTarget> tempTargets = new OverlappingIntervals<>();
+    private final ProfileIntervals<ProfileSwitch> profiles = new ProfileIntervals<>();
 
     public TreatmentsPlugin() {
+        super(new PluginDescription()
+                .mainType(PluginType.TREATMENT)
+                .fragmentClass(TreatmentsFragment.class.getName())
+                .pluginName(R.string.treatments)
+                .shortName(R.string.treatments_shortname)
+                .alwaysEnabled(true)
+                .description(R.string.description_treatments)
+        );
+        this.service = new TreatmentService();
+    }
+
+    @Override
+    protected void onStart() {
         MainApp.bus().register(this);
         initializeTempBasalData();
         initializeTreatmentData();
         initializeExtendedBolusData();
         initializeTempTargetData();
         initializeProfileSwitchData();
+        super.onStart();
     }
 
-    public static void initializeTreatmentData() {
-        // Treatments
-        double dia = MainApp.getConfigBuilder() == null ? Constants.defaultDIA : MainApp.getConfigBuilder().getProfile().getDia();
+    @Override
+    protected void onStop() {
+        MainApp.bus().register(this);
+    }
+
+    public TreatmentService getService() {
+        return this.service;
+    }
+
+    private void initializeTreatmentData() {
+        if (L.isEnabled(L.DATATREATMENTS))
+            log.debug("initializeTreatmentData");
+        double dia = Constants.defaultDIA;
+        if (ConfigBuilderPlugin.getPlugin() != null && ProfileFunctions.getInstance().getProfile() != null)
+            dia = ProfileFunctions.getInstance().getProfile().getDia();
+        long fromMills = (long) (System.currentTimeMillis() - 60 * 60 * 1000L * (24 + dia));
+        synchronized (treatments) {
+            treatments.clear();
+            treatments.addAll(getService().getTreatmentDataFromTime(fromMills, false));
+        }
+    }
+
+    private void initializeTempBasalData() {
+        if (L.isEnabled(L.DATATREATMENTS))
+            log.debug("initializeTempBasalData");
+        double dia = Constants.defaultDIA;
+        if (ConfigBuilderPlugin.getPlugin() != null && ProfileFunctions.getInstance().getProfile() != null)
+            dia = ProfileFunctions.getInstance().getProfile().getDia();
         long fromMills = (long) (System.currentTimeMillis() - 60 * 60 * 1000L * (24 + dia));
 
-        treatments = MainApp.getDbHelper().getTreatmentDataFromTime(fromMills, false);
+        synchronized (tempBasals) {
+            tempBasals.reset().add(MainApp.getDbHelper().getTemporaryBasalsDataFromTime(fromMills, false));
+        }
+
     }
 
-    public static void initializeTempBasalData() {
-        // Treatments
-        double dia = MainApp.getConfigBuilder() == null ? Constants.defaultDIA : MainApp.getConfigBuilder().getProfile().getDia();
+    private void initializeExtendedBolusData() {
+        if (L.isEnabled(L.DATATREATMENTS))
+            log.debug("initializeExtendedBolusData");
+        double dia = Constants.defaultDIA;
+        if (ConfigBuilderPlugin.getPlugin() != null && ProfileFunctions.getInstance().getProfile() != null)
+            dia = ProfileFunctions.getInstance().getProfile().getDia();
         long fromMills = (long) (System.currentTimeMillis() - 60 * 60 * 1000L * (24 + dia));
 
-        tempBasals.reset().add(MainApp.getDbHelper().getTemporaryBasalsDataFromTime(fromMills, false));
+        synchronized (extendedBoluses) {
+            extendedBoluses.reset().add(MainApp.getDbHelper().getExtendedBolusDataFromTime(fromMills, false));
+        }
 
     }
 
-    public static void initializeExtendedBolusData() {
-        // Treatments
-        double dia = MainApp.getConfigBuilder() == null ? Constants.defaultDIA : MainApp.getConfigBuilder().getProfile().getDia();
-        long fromMills = (long) (System.currentTimeMillis() - 60 * 60 * 1000L * (24 + dia));
-
-        extendedBoluses.reset().add(MainApp.getDbHelper().getExtendedBolusDataFromTime(fromMills, false));
-
+    private void initializeTempTargetData() {
+        if (L.isEnabled(L.DATATREATMENTS))
+            log.debug("initializeTempTargetData");
+        synchronized (tempTargets) {
+            long fromMills = System.currentTimeMillis() - 60 * 60 * 1000L * 24;
+            tempTargets.reset().add(MainApp.getDbHelper().getTemptargetsDataFromTime(fromMills, false));
+        }
     }
 
-    public void initializeTempTargetData() {
-        long fromMills = System.currentTimeMillis() - 60 * 60 * 1000L * 24;
-        tempTargets.reset().add(MainApp.getDbHelper().getTemptargetsDataFromTime(fromMills, false));
-    }
-
-    public void initializeProfileSwitchData() {
-        profiles.reset().add(MainApp.getDbHelper().getProfileSwitchData(false));
+    private void initializeProfileSwitchData() {
+        if (L.isEnabled(L.DATATREATMENTS))
+            log.debug("initializeProfileSwitchData");
+        synchronized (profiles) {
+            profiles.reset().add(MainApp.getDbHelper().getProfileSwitchData(false));
+        }
     }
 
     @Override
@@ -170,82 +178,142 @@ public class TreatmentsPlugin implements PluginBase, TreatmentsInterface {
     public IobTotal getCalculationToTimeTreatments(long time) {
         IobTotal total = new IobTotal(time);
 
-        Profile profile = MainApp.getConfigBuilder().getProfile();
+        Profile profile = ProfileFunctions.getInstance().getProfile();
         if (profile == null)
             return total;
 
+        InsulinInterface insulinInterface = ConfigBuilderPlugin.getPlugin().getActiveInsulin();
+        if (insulinInterface == null)
+            return  total;
+
         double dia = profile.getDia();
 
-        for (Integer pos = 0; pos < treatments.size(); pos++) {
-            Treatment t = treatments.get(pos);
-            if (t.date > time) continue;
-            Iob tIOB = t.iobCalc(time, dia);
-            total.iob += tIOB.iobContrib;
-            total.activity += tIOB.activityContrib;
-            Iob bIOB = t.iobCalc(time, dia / SP.getDouble("openapsama_bolussnooze_dia_divisor", 2.0));
-            total.bolussnooze += bIOB.iobContrib;
+        synchronized (treatments) {
+            for (Integer pos = 0; pos < treatments.size(); pos++) {
+                Treatment t = treatments.get(pos);
+                if (!t.isValid) continue;
+                if (t.date > time) continue;
+                Iob tIOB = t.iobCalc(time, dia);
+                total.iob += tIOB.iobContrib;
+                total.activity += tIOB.activityContrib;
+                if (t.insulin > 0 && t.date > total.lastBolusTime)
+                    total.lastBolusTime = t.date;
+                if (!t.isSMB) {
+                    // instead of dividing the DIA that only worked on the bilinear curves,
+                    // multiply the time the treatment is seen active.
+                    long timeSinceTreatment = time - t.date;
+                    long snoozeTime = t.date + (long) (timeSinceTreatment * SP.getDouble(R.string.key_openapsama_bolussnooze_dia_divisor, 2.0));
+                    Iob bIOB = t.iobCalc(snoozeTime, dia);
+                    total.bolussnooze += bIOB.iobContrib;
+                }
+            }
         }
 
-        if (!MainApp.getConfigBuilder().isFakingTempsByExtendedBoluses())
-            for (Integer pos = 0; pos < extendedBoluses.size(); pos++) {
-                ExtendedBolus e = extendedBoluses.get(pos);
-                if (e.date > time) continue;
-                IobTotal calc = e.iobCalc(time);
-                total.plus(calc);
+        if (!ConfigBuilderPlugin.getPlugin().getActivePump().isFakingTempsByExtendedBoluses())
+            synchronized (extendedBoluses) {
+                for (Integer pos = 0; pos < extendedBoluses.size(); pos++) {
+                    ExtendedBolus e = extendedBoluses.get(pos);
+                    if (e.date > time) continue;
+                    IobTotal calc = e.iobCalc(time);
+                    total.plus(calc);
+                }
             }
         return total;
     }
 
     @Override
     public void updateTotalIOBTreatments() {
-        IobTotal total = getCalculationToTimeTreatments(System.currentTimeMillis());
-
-        lastTreatmentCalculation = total;
+        lastTreatmentCalculation = getCalculationToTimeTreatments(System.currentTimeMillis());
     }
 
     @Override
     public MealData getMealData() {
         MealData result = new MealData();
 
-        Profile profile = MainApp.getConfigBuilder().getProfile();
+        Profile profile = ProfileFunctions.getInstance().getProfile();
         if (profile == null) return result;
 
         long now = System.currentTimeMillis();
-        long dia_ago = now - (new Double(1.5d * profile.getDia() * 60 * 60 * 1000l)).longValue();
+        long dia_ago = now - (Double.valueOf(profile.getDia() * T.hours(1).msecs())).longValue();
 
-        for (Treatment treatment : treatments) {
-            long t = treatment.date;
-            if (t > dia_ago && t <= now) {
-                if (treatment.carbs >= 1) {
-                    result.carbs += treatment.carbs;
+        double maxAbsorptionHours = Constants.DEFAULT_MAX_ABSORPTION_TIME;
+        if (SensitivityAAPSPlugin.getPlugin().isEnabled(PluginType.SENSITIVITY) || SensitivityWeightedAveragePlugin.getPlugin().isEnabled(PluginType.SENSITIVITY)) {
+            maxAbsorptionHours = SP.getDouble(R.string.key_absorption_maxtime, Constants.DEFAULT_MAX_ABSORPTION_TIME);
+        } else {
+            maxAbsorptionHours = SP.getDouble(R.string.key_absorption_cutoff, Constants.DEFAULT_MAX_ABSORPTION_TIME);
+        }
+        long absorptionTime_ago = now - (Double.valueOf(maxAbsorptionHours * T.hours(1).msecs())).longValue();
+
+        synchronized (treatments) {
+            for (Treatment treatment : treatments) {
+                if (!treatment.isValid)
+                    continue;
+                long t = treatment.date;
+
+                if (t > dia_ago && t <= now) {
+                    if (treatment.insulin > 0 && treatment.mealBolus) {
+                        result.boluses += treatment.insulin;
+                    }
                 }
-                if (treatment.insulin > 0 && treatment.mealBolus) {
-                    result.boluses += treatment.insulin;
+
+                if (t > absorptionTime_ago && t <= now) {
+                    if (treatment.carbs >= 1) {
+                        result.carbs += treatment.carbs;
+                        if(t > result.lastCarbTime)
+                            result.lastCarbTime = t;
+                    }
                 }
             }
         }
 
-        AutosensData autosensData = IobCobCalculatorPlugin.getLastAutosensData();
+        AutosensData autosensData = IobCobCalculatorPlugin.getPlugin().getLastAutosensDataSynchronized("getMealData()");
         if (autosensData != null) {
             result.mealCOB = autosensData.cob;
+            result.slopeFromMinDeviation = autosensData.slopeFromMinDeviation;
+            result.slopeFromMaxDeviation = autosensData.slopeFromMaxDeviation;
+            result.usedMinCarbsImpact = autosensData.usedMinCarbsImpact;
         }
+        result.lastBolusTime = getLastBolusTime();
         return result;
     }
 
     @Override
     public List<Treatment> getTreatmentsFromHistory() {
-        return treatments;
+        synchronized (treatments) {
+            return new ArrayList<>(treatments);
+        }
     }
 
     @Override
     public List<Treatment> getTreatments5MinBackFromHistory(long time) {
         List<Treatment> in5minback = new ArrayList<>();
-        for (Integer pos = 0; pos < treatments.size(); pos++) {
-            Treatment t = treatments.get(pos);
-            if (t.date <= time && t.date > time - 5 * 60 * 1000 && t.carbs > 0)
-                in5minback.add(t);
+        synchronized (treatments) {
+            for (Integer pos = 0; pos < treatments.size(); pos++) {
+                Treatment t = treatments.get(pos);
+                if (!t.isValid)
+                    continue;
+                if (t.date <= time && t.date > time - 5 * 60 * 1000 && t.carbs > 0)
+                    in5minback.add(t);
+            }
+            return in5minback;
         }
-        return in5minback;
+    }
+
+    @Override
+    public long getLastBolusTime() {
+        long now = System.currentTimeMillis();
+        long last = 0;
+        synchronized (treatments) {
+            for (Treatment t : treatments) {
+                if (!t.isValid)
+                    continue;
+                if (t.date > last && t.insulin > 0 && t.isValid && t.date <= now)
+                    last = t.date;
+            }
+        }
+        if (L.isEnabled(L.DATATREATMENTS))
+        log.debug("Last bolus time: " + new Date(last).toLocaleString());
+        return last;
     }
 
     @Override
@@ -255,7 +323,9 @@ public class TreatmentsPlugin implements PluginBase, TreatmentsInterface {
 
     @Override
     public TemporaryBasal getRealTempBasalFromHistory(long time) {
-        return (TemporaryBasal) tempBasals.getValueByInterval(time);
+        synchronized (tempBasals) {
+            return tempBasals.getValueByInterval(time);
+        }
     }
 
     @Override
@@ -270,14 +340,18 @@ public class TreatmentsPlugin implements PluginBase, TreatmentsInterface {
 
     @Subscribe
     public void onStatusEvent(final EventReloadTreatmentData ev) {
+        if (L.isEnabled(L.DATATREATMENTS))
         log.debug("EventReloadTreatmentData");
         initializeTreatmentData();
         initializeExtendedBolusData();
         updateTotalIOBTreatments();
+        MainApp.bus().post(ev.next);
     }
 
     @Subscribe
+    @SuppressWarnings("unused")
     public void onStatusEvent(final EventReloadTempBasalData ev) {
+        if (L.isEnabled(L.DATATREATMENTS))
         log.debug("EventReloadTempBasalData");
         initializeTempBasalData();
         updateTotalIOBTempBasals();
@@ -289,22 +363,51 @@ public class TreatmentsPlugin implements PluginBase, TreatmentsInterface {
     }
 
     @Override
-    public IobTotal getCalculationToTimeTempBasals(long time) {
+    public IobTotal getCalculationToTimeTempBasals(long time, Profile profile) {
+        return getCalculationToTimeTempBasals(time, profile, false, 0);
+    }
+
+    public IobTotal getCalculationToTimeTempBasals(long time, Profile profile, boolean truncate, long truncateTime) {
         IobTotal total = new IobTotal(time);
-        for (Integer pos = 0; pos < tempBasals.size(); pos++) {
-            TemporaryBasal t = tempBasals.get(pos);
-            if (t.date > time) continue;
-            IobTotal calc = t.iobCalc(time);
-            //log.debug("BasalIOB " + new Date(time) + " >>> " + calc.basaliob);
-            total.plus(calc);
+
+        InsulinInterface insulinInterface = ConfigBuilderPlugin.getPlugin().getActiveInsulin();
+        if (insulinInterface == null)
+            return  total;
+
+        synchronized (tempBasals) {
+            for (Integer pos = 0; pos < tempBasals.size(); pos++) {
+                TemporaryBasal t = tempBasals.get(pos);
+                if (t.date > time) continue;
+                IobTotal calc;
+                if(truncate && t.end() > truncateTime){
+                    TemporaryBasal dummyTemp = new TemporaryBasal();
+                    dummyTemp.copyFrom(t);
+                    dummyTemp.cutEndTo(truncateTime);
+                    calc = dummyTemp.iobCalc(time, profile);
+                } else {
+                    calc = t.iobCalc(time, profile);
+                }
+                //log.debug("BasalIOB " + new Date(time) + " >>> " + calc.basaliob);
+                total.plus(calc);
+            }
         }
-        if (MainApp.getConfigBuilder().isFakingTempsByExtendedBoluses()) {
+        if (ConfigBuilderPlugin.getPlugin().getActivePump().isFakingTempsByExtendedBoluses()) {
             IobTotal totalExt = new IobTotal(time);
-            for (Integer pos = 0; pos < extendedBoluses.size(); pos++) {
-                ExtendedBolus e = extendedBoluses.get(pos);
-                if (e.date > time) continue;
-                IobTotal calc = e.iobCalc(time);
-                totalExt.plus(calc);
+            synchronized (extendedBoluses) {
+                for (Integer pos = 0; pos < extendedBoluses.size(); pos++) {
+                    ExtendedBolus e = extendedBoluses.get(pos);
+                    if (e.date > time) continue;
+                    IobTotal calc;
+                    if(truncate && e.end() > truncateTime){
+                        ExtendedBolus dummyExt = new ExtendedBolus();
+                        dummyExt.copyFrom(e);
+                        dummyExt.cutEndTo(truncateTime);
+                        calc = dummyExt.iobCalc(time);
+                    } else {
+                        calc = e.iobCalc(time);
+                    }
+                    totalExt.plus(calc);
+                }
             }
             // Convert to basal iob
             totalExt.basaliob = totalExt.iob;
@@ -318,9 +421,9 @@ public class TreatmentsPlugin implements PluginBase, TreatmentsInterface {
 
     @Override
     public void updateTotalIOBTempBasals() {
-        IobTotal total = getCalculationToTimeTempBasals(System.currentTimeMillis());
-
-        lastTempBasalsCalculation = total;
+        Profile profile = ProfileFunctions.getInstance().getProfile();
+        if (profile != null)
+            lastTempBasalsCalculation = getCalculationToTimeTempBasals(DateUtil.now(), profile);
     }
 
     @Nullable
@@ -330,142 +433,199 @@ public class TreatmentsPlugin implements PluginBase, TreatmentsInterface {
         if (tb != null)
             return tb;
         ExtendedBolus eb = getExtendedBolusFromHistory(time);
-        if (eb != null && MainApp.getConfigBuilder().isFakingTempsByExtendedBoluses())
+        if (eb != null && ConfigBuilderPlugin.getPlugin().getActivePump().isFakingTempsByExtendedBoluses())
             return new TemporaryBasal(eb);
         return null;
     }
 
     @Override
     public ExtendedBolus getExtendedBolusFromHistory(long time) {
-        return (ExtendedBolus) extendedBoluses.getValueByInterval(time);
+        synchronized (extendedBoluses) {
+            return extendedBoluses.getValueByInterval(time);
+        }
     }
 
     @Override
     public boolean addToHistoryExtendedBolus(ExtendedBolus extendedBolus) {
         //log.debug("Adding new ExtentedBolus record" + extendedBolus.log());
-        return MainApp.getDbHelper().createOrUpdate(extendedBolus);
-    }
-
-    @Override
-    public OverlappingIntervals<ExtendedBolus> getExtendedBolusesFromHistory() {
-        return extendedBoluses;
-    }
-
-    @Override
-    public double getTempBasalAbsoluteRateHistory() {
-        PumpInterface pump = MainApp.getConfigBuilder();
-
-        TemporaryBasal tb = getTempBasalFromHistory(System.currentTimeMillis());
-        if (tb != null) {
-            if (tb.isFakeExtended){
-                double baseRate = pump.getBaseBasalRate();
-                double tempRate = baseRate + tb.netExtendedRate;
-                return tempRate;
-            } else if (tb.isAbsolute) {
-                return tb.absoluteRate;
-            } else {
-                double baseRate = pump.getBaseBasalRate();
-                double tempRate = baseRate * (tb.percentRate / 100d);
-                return tempRate;
-            }
+        boolean newRecordCreated = MainApp.getDbHelper().createOrUpdate(extendedBolus);
+        if (newRecordCreated) {
+            if (extendedBolus.durationInMinutes == 0) {
+                if (ConfigBuilderPlugin.getPlugin().getActivePump().isFakingTempsByExtendedBoluses())
+                    NSUpload.uploadTempBasalEnd(extendedBolus.date, true, extendedBolus.pumpId);
+                else
+                    NSUpload.uploadExtendedBolusEnd(extendedBolus.date, extendedBolus.pumpId);
+            } else if (ConfigBuilderPlugin.getPlugin().getActivePump().isFakingTempsByExtendedBoluses())
+                NSUpload.uploadTempBasalStartAbsolute(new TemporaryBasal(extendedBolus), extendedBolus.insulin);
+            else
+                NSUpload.uploadExtendedBolus(extendedBolus);
         }
-        return 0;
+        return newRecordCreated;
     }
 
     @Override
-    public double getTempBasalRemainingMinutesFromHistory() {
-        if (isTempBasalInProgress())
-            return getTempBasalFromHistory(System.currentTimeMillis()).getPlannedRemainingMinutes();
-        return 0;
+    public Intervals<ExtendedBolus> getExtendedBolusesFromHistory() {
+        synchronized (extendedBoluses) {
+            return new NonOverlappingIntervals<>(extendedBoluses);
+        }
     }
 
     @Override
-    public OverlappingIntervals<TemporaryBasal> getTemporaryBasalsFromHistory() {
-        return tempBasals;
+    public Intervals<TemporaryBasal> getTemporaryBasalsFromHistory() {
+        synchronized (tempBasals) {
+            return new NonOverlappingIntervals<>(tempBasals);
+        }
     }
 
     @Override
     public boolean addToHistoryTempBasal(TemporaryBasal tempBasal) {
         //log.debug("Adding new TemporaryBasal record" + tempBasal.toString());
-        return MainApp.getDbHelper().createOrUpdate(tempBasal);
+        boolean newRecordCreated = MainApp.getDbHelper().createOrUpdate(tempBasal);
+        if (newRecordCreated) {
+            if (tempBasal.durationInMinutes == 0)
+                NSUpload.uploadTempBasalEnd(tempBasal.date, false, tempBasal.pumpId);
+            else if (tempBasal.isAbsolute)
+                NSUpload.uploadTempBasalStartAbsolute(tempBasal, null);
+            else
+                NSUpload.uploadTempBasalStartPercent(tempBasal);
+        }
+        return newRecordCreated;
     }
 
+    // return true if new record is created
     @Override
-    public boolean addToHistoryTreatment(DetailedBolusInfo detailedBolusInfo) {
-        Treatment treatment = new Treatment(detailedBolusInfo.insulinInterface);
+    public boolean addToHistoryTreatment(DetailedBolusInfo detailedBolusInfo, boolean allowUpdate) {
+        Treatment treatment = new Treatment();
         treatment.date = detailedBolusInfo.date;
         treatment.source = detailedBolusInfo.source;
         treatment.pumpId = detailedBolusInfo.pumpId;
         treatment.insulin = detailedBolusInfo.insulin;
+        treatment.isValid = detailedBolusInfo.isValid;
+        treatment.isSMB = detailedBolusInfo.isSMB;
         if (detailedBolusInfo.carbTime == 0)
             treatment.carbs = detailedBolusInfo.carbs;
         treatment.source = detailedBolusInfo.source;
         treatment.mealBolus = treatment.carbs > 0;
-        boolean newRecordCreated = MainApp.getDbHelper().createOrUpdate(treatment);
+        treatment.boluscalc = detailedBolusInfo.boluscalc != null ? detailedBolusInfo.boluscalc.toString() : null;
+        TreatmentService.UpdateReturn creatOrUpdateResult = getService().createOrUpdate(treatment);
+        boolean newRecordCreated = creatOrUpdateResult.newRecord;
         //log.debug("Adding new Treatment record" + treatment.toString());
         if (detailedBolusInfo.carbTime != 0) {
-            Treatment carbsTreatment = new Treatment(detailedBolusInfo.insulinInterface);
+            Treatment carbsTreatment = new Treatment();
             carbsTreatment.source = detailedBolusInfo.source;
             carbsTreatment.pumpId = detailedBolusInfo.pumpId; // but this should never happen
             carbsTreatment.date = detailedBolusInfo.date + detailedBolusInfo.carbTime * 60 * 1000L + 1000L; // add 1 sec to make them different records
             carbsTreatment.carbs = detailedBolusInfo.carbs;
             carbsTreatment.source = detailedBolusInfo.source;
-            MainApp.getDbHelper().createOrUpdate(carbsTreatment);
+            getService().createOrUpdate(carbsTreatment);
             //log.debug("Adding new Treatment record" + carbsTreatment);
         }
+        if (newRecordCreated && detailedBolusInfo.isValid)
+            NSUpload.uploadTreatmentRecord(detailedBolusInfo);
+
+        if (!allowUpdate && !creatOrUpdateResult.success) {
+            log.error("Treatment could not be added to DB", new Exception());
+
+            String status = String.format(MainApp.gs(R.string.error_adding_treatment_message), treatment.insulin, (int) treatment.carbs, DateUtil.dateAndTimeString(treatment.date));
+
+            Intent i = new Intent(MainApp.instance(), ErrorHelperActivity.class);
+            i.putExtra("soundid", R.raw.error);
+            i.putExtra("title", MainApp.gs(R.string.error_adding_treatment_title));
+            i.putExtra("status", status);
+            i.addFlags(Intent.FLAG_ACTIVITY_NEW_TASK);
+            MainApp.instance().startActivity(i);
+
+            CustomEvent customEvent = new CustomEvent("TreatmentClash");
+            customEvent.putCustomAttribute("status", status);
+            FabricPrivacy.getInstance().logCustom(customEvent);
+        }
+
         return newRecordCreated;
     }
 
     @Override
     public long oldestDataAvailable() {
         long oldestTime = System.currentTimeMillis();
-        if (tempBasals.size() > 0)
-            oldestTime = Math.min(oldestTime, tempBasals.get(0).date);
-        if (extendedBoluses.size() > 0)
-            oldestTime = Math.min(oldestTime, extendedBoluses.get(0).date);
-        if (treatments.size() > 0)
-            oldestTime = Math.min(oldestTime, treatments.get(treatments.size() - 1).date);
+        synchronized (tempBasals) {
+            if (tempBasals.size() > 0)
+                oldestTime = Math.min(oldestTime, tempBasals.get(0).date);
+        }
+        synchronized (extendedBoluses) {
+            if (extendedBoluses.size() > 0)
+                oldestTime = Math.min(oldestTime, extendedBoluses.get(0).date);
+        }
+        synchronized (treatments) {
+            if (treatments.size() > 0)
+                oldestTime = Math.min(oldestTime, treatments.get(treatments.size() - 1).date);
+        }
         oldestTime -= 15 * 60 * 1000L; // allow 15 min before
         return oldestTime;
     }
 
     // TempTargets
     @Subscribe
+    @SuppressWarnings("unused")
     public void onStatusEvent(final EventTempTargetChange ev) {
         initializeTempTargetData();
     }
 
     @Nullable
     @Override
+    public TempTarget getTempTargetFromHistory() {
+        synchronized (tempTargets) {
+            return tempTargets.getValueByInterval(System.currentTimeMillis());
+        }
+    }
+
+    @Nullable
+    @Override
     public TempTarget getTempTargetFromHistory(long time) {
-        return (TempTarget) tempTargets.getValueByInterval(time);
+        synchronized (tempTargets) {
+            return tempTargets.getValueByInterval(time);
+        }
     }
 
     @Override
-    public OverlappingIntervals<TempTarget> getTempTargetsFromHistory() {
-        return tempTargets;
+    public Intervals<TempTarget> getTempTargetsFromHistory() {
+        synchronized (tempTargets) {
+            return new OverlappingIntervals<>(tempTargets);
+        }
+    }
+
+    @Override
+    public void addToHistoryTempTarget(TempTarget tempTarget) {
+        //log.debug("Adding new TemporaryBasal record" + profileSwitch.log());
+        MainApp.getDbHelper().createOrUpdate(tempTarget);
+        NSUpload.uploadTempTarget(tempTarget);
     }
 
     // Profile Switch
     @Subscribe
+    @SuppressWarnings("unused")
     public void onStatusEvent(final EventReloadProfileSwitchData ev) {
         initializeProfileSwitchData();
     }
 
     @Override
     public ProfileSwitch getProfileSwitchFromHistory(long time) {
-        return (ProfileSwitch) profiles.getValueToTime(time);
+        synchronized (profiles) {
+            return (ProfileSwitch) profiles.getValueToTime(time);
+        }
     }
 
     @Override
     public ProfileIntervals<ProfileSwitch> getProfileSwitchesFromHistory() {
-        return profiles;
+        synchronized (profiles) {
+            return new ProfileIntervals<>(profiles);
+        }
     }
 
     @Override
     public void addToHistoryProfileSwitch(ProfileSwitch profileSwitch) {
         //log.debug("Adding new TemporaryBasal record" + profileSwitch.log());
+        MainApp.bus().post(new EventDismissNotification(Notification.PROFILE_SWITCH_MISSING));
         MainApp.getDbHelper().createOrUpdate(profileSwitch);
+        NSUpload.uploadProfileSwitch(profileSwitch);
     }
 
 
